feat: add blazor bootstrap

--- a/src/SimpleFinance.WebApp/Components/_Imports.razor
+++ b/src/SimpleFinance.WebApp/Components/_Imports.razor
@@ -9,3 +9,4 @@
 @using SimpleFinance.WebApp
 @using SimpleFinance.WebApp.Components
 @using SimpleFinance.WebApp.Components.Layout
+@using BlazorBootstrap;
