--- a/src/SimpleFinance.WebApp/Components/Layout/MainLayout.razor.css
+++ b/src/SimpleFinance.WebApp/Components/Layout/MainLayout.razor.css
@@ -1,13 +1,6 @@
-.page {
+.bb-page {
     display: flex;
     min-height: 100vh;
-}
-
-.sidebar {
-    width: 250px;
-    flex-shrink: 0;
-    background-color: #f8f9fa;
-    border-right: 1px solid #dee2e6;
 }
 
 main {
