--- a/src/SimpleFinance.WebApp/Components/Layout/MainLayout.razor
+++ b/src/SimpleFinance.WebApp/Components/Layout/MainLayout.razor
@@ -31,7 +31,8 @@
         navItems = new List<NavItem>
         {
             new NavItem { Id = "1", Href = "/home", IconName = IconName.HouseDoorFill, Text = "Home", Match=NavLinkMatch.All},
-            new NavItem { Id = "2", Href = "/institutions", IconName = IconName.PlusSquareFill, Text = "Institutions"}
+            new NavItem { Id = "2", Href = "/institutions", IconName = IconName.Bank, Text = "Institutions"},
+            new NavItem { Id = "3", Href = "/account-types", IconName = IconName.ListUl, Text = "Account Types"}
         };
 
         return navItems;
