feat: add account ui

--- a/src/SimpleFinance.WebApp/Components/Layout/MainLayout.razor
+++ b/src/SimpleFinance.WebApp/Components/Layout/MainLayout.razor
@@ -32,7 +32,8 @@
         {
             new NavItem { Id = "1", Href = "/home", IconName = IconName.HouseDoorFill, Text = "Home", Match=NavLinkMatch.All},
             new NavItem { Id = "2", Href = "/institutions", IconName = IconName.Bank, Text = "Institutions"},
-            new NavItem { Id = "3", Href = "/account-types", IconName = IconName.ListUl, Text = "Account Types"}
+            new NavItem { Id = "3", Href = "/account-types", IconName = IconName.ListUl, Text = "Account Types"},
+            new NavItem { Id = "4", Href = "/accounts", IconName = IconName.Wallet2, Text = "Accounts"}
         };
 
         return navItems;
