feat: add transaction ui

--- a/src/SimpleFinance.WebApp/Components/Layout/MainLayout.razor
+++ b/src/SimpleFinance.WebApp/Components/Layout/MainLayout.razor
@@ -34,7 +34,8 @@
             new NavItem { Id = "2", Href = "/institutions", IconName = IconName.Bank, Text = "Institutions"},
             new NavItem { Id = "3", Href = "/account-types", IconName = IconName.ListUl, Text = "Account Types"},
             new NavItem { Id = "4", Href = "/accounts", IconName = IconName.Wallet2, Text = "Accounts"},
-            new NavItem { Id = "5", Href = "/expense-categories", IconName = IconName.Tags, Text = "Expense Categories"}
+            new NavItem { Id = "5", Href = "/expense-categories", IconName = IconName.Tags, Text = "Expense Categories"},
+            new NavItem { Id = "6", Href = "/transactions", IconName = IconName.CashCoin, Text = "Transactions"}
         };
 
         return navItems;
