feat: transaction type

--- a/src/SimpleFinance.WebApp/Components/Layout/MainLayout.razor
+++ b/src/SimpleFinance.WebApp/Components/Layout/MainLayout.razor
@@ -35,7 +35,8 @@
             new NavItem { Id = "3", Href = "/account-types", IconName = IconName.ListUl, Text = "Account Types"},
             new NavItem { Id = "4", Href = "/accounts", IconName = IconName.Wallet2, Text = "Accounts"},
             new NavItem { Id = "5", Href = "/expense-categories", IconName = IconName.Tags, Text = "Expense Categories"},
-            new NavItem { Id = "6", Href = "/transactions", IconName = IconName.CashCoin, Text = "Transactions"}
+            new NavItem { Id = "6", Href = "/transactions", IconName = IconName.CashCoin, Text = "Transactions"},
+            new NavItem { Id = "7", Href = "/transaction-types", IconName = IconName.Receipt, Text = "Transaction Types"}
         };
 
         return navItems;
