--- a/src/SimpleFinance.WebApp/Components/Pages/Accounts/AddAccount.razor
+++ b/src/SimpleFinance.WebApp/Components/Pages/Accounts/AddAccount.razor
@@ -125,7 +125,7 @@ else
         { 
             Name = string.Empty,
             AccountTypeId = 0,
-            InstitutionId = Guid.Empty,
+            InstitutionId = 0,
             Currency = "EUR",
             IsActive = true
         };
