--- a/src/SimpleFinance.WebApp/Components/Layout/MainLayout.razor
+++ b/src/SimpleFinance.WebApp/Components/Layout/MainLayout.razor
@@ -2,10 +2,10 @@
 
 <div class="bb-page">
 
-    <Sidebar @ref="sidebar"
+    <Sidebar2 @ref="sidebar"
              IconName="IconName.BootstrapFill"
              Title="Simple Finance"
-             DataProvider="SidebarDataProvider" />
+             DataProvider="Sidebar2DataProvider" />
 
     <main>
         <article class="content px-4">
@@ -16,10 +16,10 @@
 </div>
 
 @code {
-    Sidebar sidebar;
+    Sidebar2 sidebar;
     IEnumerable<NavItem> navItems;
 
-    private async Task<SidebarDataProviderResult> SidebarDataProvider(SidebarDataProviderRequest request)
+    private async Task<Sidebar2DataProviderResult> Sidebar2DataProvider(Sidebar2DataProviderRequest request)
     {
         if (navItems is null)
             navItems = GetNavItems();
@@ -31,13 +31,15 @@
         navItems = new List<NavItem>
         {
             new NavItem { Id = "1", Href = "/home", IconName = IconName.HouseDoorFill, Text = "Home", Match=NavLinkMatch.All},
-            new NavItem { Id = "2", IconName = IconName.ExclamationTriangleFill, Text = "Configuration" },
+            new NavItem { Id = "2", IconName = IconName.Arrow90DegDown, Text = "Configuration" },
             new NavItem { Id = "3", Href = "/institutions", IconName = IconName.Bank, Text = "Institutions", ParentId = "2"},
-            new NavItem { Id = "4", Href = "/account-types", IconName = IconName.ListUl, Text = "Account Types", ParentId = "2"},
-            new NavItem { Id = "5", Href = "/accounts", IconName = IconName.Wallet2, Text = "Accounts", ParentId = "2"},
-            new NavItem { Id = "6", Href = "/expense-categories", IconName = IconName.Tags, Text = "Expense Categories", ParentId = "2"},
-            new NavItem { Id = "7", Href = "/transactions", IconName = IconName.CashCoin, Text = "Transactions", ParentId = "2"},
-            new NavItem { Id = "8", Href = "/transaction-types", IconName = IconName.Receipt, Text = "Transaction Types", ParentId = "2"}
+            new NavItem { Id = "4", Href = "/account-types", IconName = IconName.ListUl, Text = "Account Types", ParentId = "9"},
+            new NavItem { Id = "5", Href = "/accounts", IconName = IconName.Wallet2, Text = "Accounts", ParentId = "9"},
+            new NavItem { Id = "6", Href = "/expense-categories", IconName = IconName.Tags, Text = "Expense Categories", ParentId = "9"},
+            new NavItem { Id = "7", Href = "/transactions", IconName = IconName.CashCoin, Text = "Transactions"},
+            new NavItem { Id = "8", Href = "/transaction-types", IconName = IconName.Receipt, Text = "Transaction Types", ParentId = "10"},
+            new NavItem { Id = "9", IconName = IconName.ExclamationTriangleFill, Text = "Account", ParentId = "2"},
+            new NavItem { Id = "10", IconName = IconName.ExclamationTriangleFill, Text = "Transactions", ParentId = "2"}
         };
 
         return navItems;
